# qf_zero_v2_software

./: .gitmodules  APP编程规范  CMakeLists.txt  README.md  partition.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  上位机USB通信指令表  取模记录  取模记录.txt  操作说明  更新日志  更新日志.txt  电路解读.md  目录说明  系统键值对  编程指南
main/: CMakeLists.txt
main/bottom_apps/: CMakeLists.txt  readme  目录说明
main/bottom_apps/btn_event_app/: btn_event_app.c  btn_event_app.h
main/bottom_apps/hc32_trans_app/: hc32_trans_app.c  hc32_trans_app.h
main/bottom_apps/include/: btn_event_app.h  hc32_trans_app.h  system_app.h  usb_trans_app.h
main/bottom_apps/src/: btn_event_app.c  hc32_trans_app.c  system_app.c  usb_trans_app.c
main/bottom_apps/system_app/: system_app.c  system_app.h
main/bottom_apps/usb_trans_app/: usb_trans_app.c  usb_trans_app.h
main/bottom_apps_user/atmospheric_app/: atmospheric_app.c  atmospheric_app.h
main/bottom_apps_user/mems_app/: mems_app.c  mems_app.h
main/bottom_apps_user/qmc5883l_app/: qmc5883l_app.c  qmc5883l_app.h
main/bottom_apps_user/weather_app/: weather_app.c  weather_app.h
main/data/: 说明
main/data/inc/: eeprom_manage.h
main/data/src/: eeprom_manage.c
main/inc/: static_include.h
main/include/: static_include.h
main/interfaces/inc/: device_interfaces.h  hc32_trans_interface.h  lcd_driver_interface.h  lv_input_interface.h  lvgl_interface.h  peripheral_interface.h  senser_iic_interface.h  usb_trans_interface.h
main/interfaces/include/: device_interfaces.h  hc32_trans_interface.h  lvgl_interface.h  peripheral_interface.h  usb_trans_interface.h
main/interfaces/src/: device_interfaces.c  hc32_trans_interface.c  lcd_driver_interface.c  lv_input_interface.c  lvgl_interface.c  peripheral_interface.c  senser_iic_interface.c  usb_trans_interface.c
main/src/: app_list.c  main.c
main/ui_apps/: 目录说明
main/ui_apps/app_gui_api_public/: qf_zero_v2_gui_api_public.c  qf_zero_v2_gui_api_public.h
main/ui_apps/app_mouse/: app_mouse.c  app_mouse.h  app_mouse_font_24.c  app_mouse_icon.c  app_mouse_img_pointer.c
main/ui_apps/apps/: readme
main/ui_apps/clock_app/: clock_app.c  clock_app.h  clock_app_font_24.c  clock_app_icon.c  clock_app_img_alarm.c  clock_app_img_back.c  clock_app_img_day.c  clock_app_img_stopwatch.c  clock_app_img_sure.c  字符取模记录
main/ui_apps/compass_app/: compass_app.c  compass_app.h  compass_app_font_24.c  compass_app_img_bg.c  compass_app_img_icon.c  字符取模.txt
main/ui_apps/control_center_app/: control_center_app.c  control_center_app.h  control_center_app_font_20.c  control_center_app_img_e.c  control_center_app_img_follow.c  control_center_app_img_light.c  control_center_app_img_max.c  control_center_app_img_min.c  control_center_app_img_prtsc.c  control_center_app_img_range.c  control_center_app_img_set_blk.c  control_center_app_img_temp.c  取模记录
main/ui_apps/desktop/: desktop.c  desktop.h  desktop_bg_01.c  desktop_bg_02.c  desktop_bg_03.c  desktop_img_set_blk.c  icon_desktop.c  手势说明  表盘编程手册
main/ui_apps/fonts/: CangEr_Kai_14.c  CangEr_Kai_16.c  CangEr_Kai_18.c  CangEr_Kai_22.c  CangEr_Kai_24.c  CangEr_Kai_28.c  CangEr_Kai_32.c  readme
main/ui_apps/game_2048/: game_2048.c  game_2048.h  game_2048_font_12.c  game_2048_font_16.c  game_2048_font_20.c  game_2048_font_24.c  game_2048_font_28.c  game_2048_font_32.c  game_2048_font_8.c  game_2048_icon.c  文本取模
main/ui_apps/game_minesweeper/: game_minesweeper.c  game_minesweeper.h  game_minesweeper_clip_pix.h  game_minesweeper_font_16.c  game_minesweeper_font_24.c  game_minesweeper_icon.c  game_minesweeper_img_boom.c  game_minesweeper_img_cool.c  game_minesweeper_img_cover.c  game_minesweeper_img_cry.c  game_minesweeper_img_flag.c  game_minesweeper_img_flag_big.c  game_minesweeper_img_pointer.c  game_minesweeper_img_red_boom.c  game_minesweeper_img_smile.c  game_minesweeper_img_space.c  字体取模
main/ui_apps/imgs/: img_muyu.c  img_popcat_open.c  readme
main/ui_apps/inc/: my_lv_symbol_font.h  scr_scheduler.h
main/ui_apps/include/: my_lv_symbol_font.h  scr_global_api.h
main/ui_apps/muyu_app/: muyu_app.c  muyu_app.h  muyu_app_font_18.c  muyu_app_font_22.c  muyu_app_font_24.c  muyu_app_icon.c  muyu_app_img_muyu.c
main/ui_apps/pop_cat_app/: img_popcat_close.c  img_popcat_open.c  (+4 more)
(+120 files in other folders)
